--- a/index.html
+++ b/index.html
@@ -56,30 +56,41 @@
         <h2>Introduzione</h2>
         <p>Questa è una pagina HTML di base creata come esempio. Puoi usarla come punto di partenza per i tuoi progetti.</p>
          <h2>Tell Us About Yourself</h2>
+   <h2>Tell Us About Yourself</h2>
         <form action="#" method="POST">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" placeholder="Enter your name" required>
+    <label for="name">Your Name:</label>
+    <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+    <label for="favoritePizza">Favorite Pizza:</label>
+    <input type="text" id="favoritePizza" name="favoritePizza" placeholder="Enter your favorite pizza" required>
 
-            <label for="age">Age:</label>
-            <input type="number" id="age" name="age" placeholder="Enter your age" required>
+    <label for="toppings">Preferred Toppings (Select all that apply):</label>
+    <select id="toppings" name="toppings" multiple>
+        <option value="pepperoni">Pepperoni</option>
+        <option value="mushrooms">Mushrooms</option>
+        <option value="onions">Onions</option>
+        <option value="sausage">Sausage</option>
+        <option value="bacon">Bacon</option>
+        <option value="extraCheese">Extra Cheese</option>
+        <option value="blackOlives">Black Olives</option>
+        <option value="greenPeppers">Green Peppers</option>
+        <option value="pineapple">Pineapple</option>
+        <option value="spinach">Spinach</option>
+    </select>
 
-            <label for="preferences">What do you like? (Select all that apply):</label>
-            <select id="preferences" name="preferences" multiple>
-                <option value="music">Music</option>
-                <option value="movies">Movies</option>
-                <option value="sports">Sports</option>
-                <option value="travel">Travel</option>
-                <option value="reading">Reading</option>
-            </select>
+    <label for="crust">Preferred Crust Type:</label>
+    <select id="crust" name="crust">
+        <option value="thin">Thin Crust</option>
+        <option value="thick">Thick Crust</option>
+        <option value="stuffed">Stuffed Crust</option>
+        <option value="glutenFree">Gluten-Free</option>
+    </select>
 
-            <label for="comments">Additional Comments:</label>
-            <textarea id="comments" name="comments" placeholder="Tell us more about yourself..." rows="4"></textarea>
+    <label for="comments">Any Additional Notes:</label>
+    <textarea id="comments" name="comments" placeholder="Tell us more about your pizza preferences..." rows="4"></textarea>
 
-            <button type="submit">Submit</button>
-        </form>
+    <button type="submit">Submit</button>
+</form>
     </main>
     <footer>
         <p>&copy; 2025 - Tutti i diritti riservati.</p>
