--- a/thankyou.html
+++ b/thankyou.html
@@ -51,7 +51,7 @@
     <div class="container">
         <h1>Thank You!</h1>
         <p>Your submission has been received. We appreciate your interest!</p>
-        <a href="/">Go Back to Home</a>
+        <a href="https://kjwrbfq783t.github.io/blog/">Go Back to Home</a>
     </div>
 </body>
 </html>
