--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <h1>Welcome to Our Homepage</h1>
         <p>Select an action below:</p>
         <a href="https://kjwrbfq783t.github.io/blog/thankyou.html" class="button">Go to Thank You Page</a>
-        <a href="https://kjwrbfq783t.github.io/blog/request_info.html" class="button">Go to Contact Form</a>
+        <a href="https://kjwrbfq783t.github.io/blog/request_info.html" class="button">Go to Contact Form (thank you page)</a>
+        <a href="https://kjwrbfq783t.github.io/blog/request_info2.html" class="button">Go to Contact Form (thank you mex)</a>
     </div>
 </body>
 </html>
