--- a/request_info2.html
+++ b/request_info2.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NCJKSJ37');</script>
+<!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Contact Form</title>
+    <title>Contact Form</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        .thank-you {
-            margin-top: 20px;
-            color: green;
-            font-weight: bold;
-        }
-        <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -64,31 +55,41 @@
         button:hover {
             background-color: #45a049;
         }
-    </style>
+        .thank-you-message {
+            display: none;
+            text-align: center;
+            color: #4CAF50;
+            font-size: 1.2rem;
+            margin-top: 1rem;
+        }
     </style>
 </head>
 <body>
-    <h1>Contact Us</h1>
-    <form id="contactForm">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" required><br><br>
-
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
-
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message" rows="4" required></textarea><br><br>
-
-        <button type="submit">Submit</button>
-    </form>
-
-    <p id="thankYouMessage" class="thank-you hidden">Thank you for reaching out! We will get back to you shortly.</p>
+        <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCJKSJ37"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+    <div class="container">
+        <h1>Contact Us</h1>
+        <form id="contactForm" onsubmit="handleSubmit(event)">
+            <input type="text" id="name" name="name" placeholder="Your Name" required>
+            <input type="email" id="email" name="email" placeholder="Your Email" required>
+            <textarea id="message" name="message" placeholder="Your Message" rows="4" required></textarea>
+            <button type="submit">Submit</button>
+        </form>
+        <div id="thankYouMessage" class="thank-you-message">Thank you for your message!</div>
+    </div>
 
     <script>
-        document.getElementById('contactForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent form submission
-            document.getElementById('thankYouMessage').classList.remove('hidden');
-        });
+        function handleSubmit(event) {
+            event.preventDefault(); // Evita il comportamento predefinito del form
+
+            // Nasconde il form
+            document.getElementById('contactForm').style.display = 'none';
+
+            // Mostra il messaggio di ringraziamento
+            document.getElementById('thankYouMessage').style.display = 'block';
+        }
     </script>
 </body>
 </html>
