--- a/shop.html
+++ b/shop.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+  <meta name="google-site-verification" content="1kNBO3kNnlswBYG8V7YDRxJUdrbBL3Rj8kD0Afeud8g" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ecommerce Demo - Pagamento Bonifico</title>
