--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NCJKSJ37');</script>
+})(window,document,'script','dataLayer','GTM-P3CL3GJN');</script>
 <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +54,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NCJKSJ37"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P3CL3GJN"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <div class="container">
@@ -63,6 +63,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="https://kjwrbfq783t.github.io/blog/thankyou.html" class="button">Go to Thank You Page</a>
         <a href="https://kjwrbfq783t.github.io/blog/request_info.html" class="button">Go to Contact Form (thank you page)</a>
         <a href="https://kjwrbfq783t.github.io/blog/request_info2.html" class="button">Go to Contact Form (thank you mex)</a>
+                <a href="https://kjwrbfq783t.github.io/blog/shop.html" class="button">Go to Shop</a>
+
     </div>
 </body>
 </html>
