--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="google-site-verification" content="1kNBO3kNnlswBYG8V7YDRxJUdrbBL3Rj8kD0Afeud8g" />
-    <!-- Google Tag Manager -->
+<meta name="google-site-verification" content="pNR7L3ZLHjP7XNDlZMvgiVx7ygCLVHpIen89G_kRBds" />    <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
