--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <a href="https://kjwrbfq783t.github.io/blog/thankyou.html" class="button">Go to Thank You Page</a>
         <a href="https://kjwrbfq783t.github.io/blog/request_info.html" class="button">Go to Contact Form (thank you page)</a>
         <a href="https://kjwrbfq783t.github.io/blog/request_info2.html" class="button">Go to Contact Form (thank you mex)</a>
-                <a href="https://kjwrbfq783t.github.io/blog/shop.html" class="button">Go to Shop</a>
+                <a href="https://kjwrbfq783t.github.io/blog/shop.html" class="button">Go to shop</a>
 
     </div>
 </body>
