--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     // Fictitious products data
     const products = [
       { id: 'p1', name: 'Notebook Elegante', description: 'Notebook elegante per ogni occasione.', price: 1299.90, image: 'https://images.unsplash.com/photo-1517336714731-489689fd1ca8?auto=format&fit=crop&w=600&q=80' },
-      { id: 'p2', name: 'Penna Stilografica', description: 'Penna stilografica di alta qualità.', price: 79.50, image: 'https://images.unsplash.com/photo-1524813684322-6e2ce1fc905c?auto=format&fit=crop&w=600&q=80' },
+      { id: 'p2', name: 'Penna Stilografica', description: 'Penna stilografica di alta qualità.', price: 79.50, image: 'https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Fountain_pen_writing_%28literacy%29.jpg/500px-Fountain_pen_writing_%28literacy%29.jpg' },
       { id: 'p3', name: 'Zaino Moderno', description: 'Zaino moderno e resistente per il lavoro quotidiano.', price: 149.00, image: 'https://images.unsplash.com/photo-1542831371-d531d36971e6?auto=format&fit=crop&w=600&q=80' },
       { id: 'p4', name: 'Auricolari Wireless', description: 'Auricolari wireless con suono cristallino.', price: 199.99, image: 'https://images.unsplash.com/photo-1505740420928-5e560c06d30e?auto=format&fit=crop&w=600&q=80' }
     ];
