--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </script>
   <!-- Google tag (gtag.js) -->
 
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5BBXJL6ZV1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5BBXJL6ZV1');
+</script>
+
   <meta name="google-site-verification" content="1kNBO3kNnlswBYG8V7YDRxJUdrbBL3Rj8kD0Afeud8g" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
