Replace HubSpot form script with new version

--- a/index.html
+++ b/index.html
@@ -263,8 +263,18 @@
   </style>
 </head>
 <body>
-  <script src="https://js-eu1.hsforms.net/forms/embed/147076390.js" defer></script>
-<div class="hs-form-frame" data-region="eu1" data-form-id="fef2c4ba-ebe3-49b5-84e0-d4055d4348a2" data-portal-id="147076390"></div>
+<script
+  charset="utf-8"
+  type="text/javascript"
+  src="//js.hsforms.net/forms/embed/v2.js"
+></script>
+<script>
+  hbspt.forms.create({
+    region: 'eu1',
+    portalId: '147076390',
+    formId: 'a8ed8824-9522-400b-9308-f71df8ec1f92',
+  });
+</script>
   <header class="container" role="banner">
     <a href="#" class="logo" aria-label="Home">ShopDemo</a>
     <nav role="navigation" aria-label="Main menu">
