--- a/index.html
+++ b/index.html
@@ -269,11 +269,27 @@
   src="//js.hsforms.net/forms/embed/v2.js"
 ></script>
 <script>
-  hbspt.forms.create({
-    region: 'eu1',
-    portalId: '147076390',
-    formId: 'a8ed8824-9522-400b-9308-f71df8ec1f92',
-  });
+if (window.hbspt) {
+    hbspt.forms.create({
+      region: 'eu1',
+      portalId: '147076390',
+      formId: 'a8ed8824-9522-400b-9308-f71df8ec1f92',
+    });
+  } else {
+    // In un ambiente che supporta gli eventi di caricamento
+    // potresti usare un listener, ma un setTimeout è spesso
+    // il modo più semplice per i form HubSpot
+    setTimeout(function() {
+        if (window.hbspt) {
+            hbspt.forms.create({
+              region: 'eu1',
+              portalId: '147076390',
+              formId: 'a8ed8824-9522-400b-9308-f71df8ec1f92',
+            });
+        }
+    }, 500); // Ritardo di 500 millisecondi
+  }
+</script>
 </script>
   <header class="container" role="banner">
     <a href="#" class="logo" aria-label="Home">ShopDemo</a>
