--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <html lang="it">
 <head>
   <script type="text/javascript" src="https://embeds.iubenda.com/widgets/1c1062ed-216f-4abd-b5b4-edbee2678fc0.js"></script>
-  <script
-  charset="utf-8"
-  type="text/javascript"
-  src="//js.hsforms.net/forms/embed/v2.js"
-></script>
+
 
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -269,30 +265,13 @@
 </head>
 <body>
 
+<script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
 <script>
-if (window.hbspt) {
-    hbspt.forms.create({
-      region: 'eu1',
-      portalId: '147076390',
-      formId: 'a8ed8824-9522-400b-9308-f71df8ec1f92',
-        onBeforeFormSubmit: function ($form) {
-          console.log("prima di inviare")
-  },
-    });
-  } else {
-    // In un ambiente che supporta gli eventi di caricamento
-    // potresti usare un listener, ma un setTimeout è spesso
-    // il modo più semplice per i form HubSpot
-    setTimeout(function() {
-        if (window.hbspt) {
-            hbspt.forms.create({
-              region: 'eu1',
-              portalId: '147076390',
-              formId: 'a8ed8824-9522-400b-9308-f71df8ec1f92',
-            });
-        }
-    }, 500); // Ritardo di 500 millisecondi
-  }
+  hbspt.forms.create({
+    portalId: "147076390",
+    formId: "c28fb90d-9383-4b74-b473-f9fdfc6719b1",
+    region: "eu1"
+  });
 </script>
   <script>
 
