--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 </head>
 <body>
 
-<script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
+<script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/shell.js"></script>
 <script>
   hbspt.forms.create({
     portalId: "147076390",
