--- a/index.html
+++ b/index.html
@@ -267,19 +267,16 @@
 
 <script src="https://js-eu1.hsforms.net/forms/embed/147076390.js" defer></script>
 <div class="hs-form-frame" data-region="eu1" data-form-id="a8ed8824-9522-400b-9308-f71df8ec1f92" data-portal-id="147076390"></div>
-  <script>
-
-    window.addEventListener('message', (event) => {
-  if (
-    event.data.type === 'hsFormCallback' &&
-    event.data.eventName === 'onFormSubmitted'
-  ) {
-    console.log('Form Submitted! Event data: ${event.data}');
-  }else{
-    console.log("condizioni non corrette");
-    console.log(event.data)
-}});
-  </script>
+ <script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
+<script>
+  hbspt.forms.create({
+    portalId: "147076390",
+    formId: "e478edf8-da31-4a90-bcaa-9a8209aad522",
+    region: "eu1",
+    onFormSubmitted: function ($form, data){
+      console.log("ciao");
+  });
+</script>
   <header class="container" role="banner">
     <a href="#" class="logo" aria-label="Home">ShopDemo</a>
     <nav role="navigation" aria-label="Main menu">
