--- a/index.html
+++ b/index.html
@@ -269,13 +269,14 @@
 <div class="hs-form-frame" data-region="eu1" data-form-id="a8ed8824-9522-400b-9308-f71df8ec1f92" data-portal-id="147076390"></div>
  <script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
 <script>
+  window.addEventListener('load', function() {
   hbspt.forms.create({
     portalId: "147076390",
     formId: "e478edf8-da31-4a90-bcaa-9a8209aad522",
     region: "eu1",
     onFormSubmitted: function ($form, data){
       console.log("ciao");
-  }});
+  }});})
 </script>
   <header class="container" role="banner">
     <a href="#" class="logo" aria-label="Home">ShopDemo</a>
