--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     formId: "e478edf8-da31-4a90-bcaa-9a8209aad522",
     region: "eu1",
     onFormSubmitted: function ($form, data){
-      console.log("ciao");
+      var a=3;
   }});})
 </script>
   <header class="container" role="banner">
