--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
     region: "eu1",
     onFormSubmitted: function ($form, data){
       console.log("ciao");
+      console.log("ciao2");
   }});})
 </script>
   <header class="container" role="banner">
