--- a/index.html
+++ b/index.html
@@ -273,8 +273,7 @@
     formId: "e478edf8-da31-4a90-bcaa-9a8209aad522",
     region: "eu1",
     onFormSubmitted: function ($form, data){
-      console.log("ciao");
-      console.log("ciao2");
+     dataLayer.push({event: "hsFormSubmission", email: data.submissionValues.email});
   }});})
 </script>
   <header class="container" role="banner">
