--- a/index.html
+++ b/index.html
@@ -584,6 +584,6 @@
 <script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/147076390.js"></script>
 <!-- End of HubSpot Embed Code -->
 
-<div class="hs-form-frame" data-region="eu1" data-form-id="a8ed8824-9522-400b-9308-f71df8ec1f92" data-portal-id="147076390"></div>
-</body>
+<script src="https://js-eu1.hsforms.net/forms/embed/147076390.js" defer></script>
+<div class="hs-form-frame" data-region="eu1" data-form-id="a8ed8824-9522-400b-9308-f71df8ec1f92" data-portal-id="147076390"></div></body>
 </html>
