--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
+  <script type="text/javascript" src="https://embeds.iubenda.com/widgets/1c1062ed-216f-4abd-b5b4-edbee2678fc0.js"></script>
 
 
   <meta charset="UTF-8" />
