--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="it">
 <head>
   <script type="text/javascript" src="https://embeds.iubenda.com/widgets/1c1062ed-216f-4abd-b5b4-edbee2678fc0.js"></script>
-   <script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
+   <script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js" defer></script>
 
 
 
