--- a/index.html
+++ b/index.html
@@ -12,7 +12,104 @@
   <title>Ecommerce Demo - Pagamento Bonifico</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@500;700&display=swap');
+<style>
+/* Stili Generali della Sezione */
+#hubspot-form-testing {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    max-width: 900px;
+    margin: 20px auto;
+    padding: 20px 30px;
+    border: 1px solid #e0e0e0;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+}
 
+#hubspot-form-testing h2 {
+    color: #007bff; /* Blu HubSpot/Azzurro */
+    border-bottom: 2px solid #007bff;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+#hubspot-form-testing h3 {
+    color: #333;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    font-size: 1.25em;
+}
+
+#hubspot-form-testing hr {
+    border: 0;
+    height: 1px;
+    background: #e0e0e0;
+    margin: 20px 0;
+}
+
+/* Stile Codice */
+#hubspot-form-testing pre {
+    background-color: #f4f4f4; /* Sfondo grigio chiaro per il codice */
+    border: 1px solid #ddd;
+    border-left: 5px solid #007bff; /* Barra laterale blu */
+    padding: 10px 15px;
+    margin: 15px 0;
+    overflow-x: auto;
+    border-radius: 4px;
+    font-family: 'Consolas', 'Courier New', monospace;
+    font-size: 0.9em;
+}
+
+#hubspot-form-testing code {
+    color: #d81b60; /* Colore di evidenziazione per il codice */
+}
+
+/* Stile Liste (Istruzioni) */
+#hubspot-form-testing ol {
+    padding-left: 20px;
+}
+
+#hubspot-form-testing ol li {
+    margin-bottom: 15px;
+    line-height: 1.6;
+}
+
+/* Stile Tabelle (Parametri) */
+#hubspot-form-testing table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    font-size: 0.9em;
+}
+
+#hubspot-form-testing th, 
+#hubspot-form-testing td {
+    border: 1px solid #e0e0e0;
+    padding: 12px 15px;
+    text-align: left;
+}
+
+#hubspot-form-testing th {
+    background-color: #007bff;
+    color: white;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 0.05em;
+}
+
+#hubspot-form-testing tbody tr:nth-child(even) {
+    background-color: #f9f9f9; /* Righe alternate */
+}
+
+#hubspot-form-testing tbody tr:hover {
+    background-color: #e6f2ff; /* Evidenziazione al passaggio del mouse */
+}
+
+#hubspot-form-testing td:first-child {
+    font-weight: bold;
+    color: #333;
+    white-space: nowrap; /* Mantiene il nome del parametro su una riga */
+}
+</style>
     :root {
       --color-bg: #ffffff;
       --color-text-base: #6b7280;
